--- a/Pesquisa_App/Pesquisa_App/Scripts/pesquisa.less
+++ b/Pesquisa_App/Pesquisa_App/Scripts/pesquisa.less
@@ -22,11 +22,13 @@ label, h1{
     width: 40%;
 }
 
-.table_pesquisa{
-    background-color:blue;
+.table_pesquisa {
+    background-color: blue;
     width: 80%;
     margin: 1 auto;
     height: auto;
+}
+
 }
 .input_datas{
     font-size: medium;
