--- a/Pesquisa_App/Pesquisa_App/Scripts/pesquisa.less
+++ b/Pesquisa_App/Pesquisa_App/Scripts/pesquisa.less
@@ -10,6 +10,11 @@ a{
   color: white;
 }
 
+.opcoes{
+    margin-top: 2px;
+    margin-bottom:initial;
+}
+
 label, h1{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size:medium;
@@ -20,25 +25,35 @@ label, h1{
 .input_localidades{
     font-size: larger;
     width: 40%;
+    font-family: inherit;
+}
+
+.span_table {
+    margin-top: 2px;
+    font-size:larger;
+    color:white;
 }
 
 .table_pesquisa {
-    background-color: blue;
+    background-color: royalblue;
     width: 80%;
-    margin: 1 auto;
+    margin-bottom: 2px;
     height: auto;
+    border:solid;
+    padding: 8px;
 }
 
-}
 .input_datas{
     font-size: medium;
 }
 
-.button.btn-submit {
+.btn-submit {
     margin: 0;
     min-width: 155px;
     padding: 0 22px;
     line-height: 40px;
     height: auto;
     max-height: inherit;
+    background-color:chocolate;
+    border:inherit;
 }
