--- a/Pesquisa_App/Pesquisa_App/Scripts/pesquisa.less
+++ b/Pesquisa_App/Pesquisa_App/Scripts/pesquisa.less
@@ -5,6 +5,11 @@
 body {
     background-color: @base;
 }
+.painel_pesquisa {
+    width: 98%;
+    height: 450px;
+    position: relative;
+}
 
 a{
   color: white;
@@ -36,11 +41,18 @@ label, h1{
 
 .table_pesquisa {
     background-color: royalblue;
-    width: 80%;
+    width: 90%;
     margin-bottom: 2px;
-    height: auto;
-    border:solid;
-    padding: 8px;
+    margin-top: 8px;
+    margin: 0 auto;
+    height: 240px;
+    border: inherit;
+    padding: 5px;
+    position: absolute;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    top:25%;
 }
 
 .input_datas{
@@ -54,6 +66,7 @@ label, h1{
     line-height: 40px;
     height: auto;
     max-height: inherit;
-    background-color:chocolate;
+    background-color: #faaf3a;
     border:inherit;
+    float:right;
 }
